[package]
name = "wars-8"
version = "0.1.0"
authors = ["EliseZeroTwo <elise@headpat.services>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.21.0"
sdl2 = "0.34.3"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "3.0.1"
font8x8 = "0.2.7"
rand = { version = "0.8.1", default-features = false }
rand_pcg = "0.3.0"