[package]
name = "wars-8"
version = "0.1.0"
authors = ["EliseZeroTwo <elise@headpat.services>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.2"
directories = "3.0.1"
lazy_static = "1.4.0"
mlua = { version = "0.5.0", features = ["lua54"] }
rand = { version = "0.8.1", default-features = false }
rand_pcg = "0.3.0"
regex = "1"
sdl2 = "0.34.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmtime = "0.21.0"